--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,40 @@
+bleach==6.0.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
 cycler==0.11.0
+docutils==0.20.1
+et-xmlfile==1.1.0
 fonttools==4.38.0
+idna==3.4
+importlib-metadata==6.7.0
+importlib-resources==5.12.0
+jaraco.classes==3.2.3
+keyring==24.1.1
 kiwisolver==1.4.5
+markdown-it-py==2.2.0
 matplotlib==3.5.3
+mdurl==0.1.2
+more-itertools==9.1.0
 numpy==1.21.6
+openpyxl==3.1.2
 packaging==23.1
+pandas==1.3.5
 Pillow==9.5.0
+pkginfo==1.9.6
+Pygments==2.16.1
 pyparsing==3.1.1
 python-dateutil==2.8.2
+pytz==2023.3.post1
+pywin32-ctypes==0.2.2
+readme-renderer==37.3
+requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.5.3
 scipy==1.7.3
 six==1.16.0
+twine==4.0.2
 typing-extensions==4.7.1
+urllib3==2.0.5
+webencodings==0.5.1
+zipp==3.15.0
